[tool.poetry]
authors = ["Kelvin <there.are.no.mails@gmail.com>"]
description = ""
name = "slack-socket"
version = "0.1.0"

[tool.poetry.dependencies]
aiohttp = "^3.7.4"
fastapi = "^0.65.2"
pandas = "^1.2.5"
python = "^3.9"
slack-bolt = "^1.6.1"
uvicorn = "^0.14.0"
kaleido = "0.2.1"
plotly = "^5.0.0"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
isort = "^5.9.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
